--- a/example/web/index.html
+++ b/example/web/index.html
@@ -3,18 +3,18 @@
 <head>
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="Demonstrates how to use the responsive_table plugin.">
+  <meta name="description" content="Demonstrates how to use the tably plugin.">
 
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="responsive_table_example">
+  <meta name="apple-mobile-web-app-title" content="tably_example">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
   <link rel="shortcut icon" type="image/png" href="favicon.png"/>
 
-  <title>responsive_table_example</title>
+  <title>tably_example</title>
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
